fixed content shift due to scroll bar appearance

--- a/src/css/MainMenu.css
+++ b/src/css/MainMenu.css
@@ -1,5 +1,5 @@
 .sheet {
-    width: 100vw;
+    width: calc(100vw - 24px);
     max-width: 1200px;
     margin: 0 auto;
 
@@ -73,7 +73,7 @@
     font-size: var(--fs2);
     /* border: white 2px solid; */
 
-    @media (width>1000px){
+    @media (width>1000px) {
         max-height: 40vh;
     }
 }
